--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "pimple/pimple": "^3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.4"
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": {
