--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0",
+        "php": ">=7.0",
         "pimple/pimple": "^3.2"
     },
     "require-dev": {
